k8s/wisecow-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow
  labels:
    app: wisecow
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
        - name: wisecow
          image: ghcr.io/ackersaif/wisecow:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4499
          livenessProbe:
            httpGet:
              path: /
              port: 4499
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /
              port: 4499
            initialDelaySeconds: 5
            periodSeconds: 10
