k8s/wisecow-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
spec:
  type: NodePort         # Change to LoadBalancer if using cloud provider
  selector:
    app: wisecow
  ports:
    - protocol: TCP
      port: 4499
      targetPort: 4499
      nodePort: 30099    # optional: choose port 30000-32767
